--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -8,22 +8,70 @@
       @import url(//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
       @import url(//fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
-      body { 
-        font-family: 'Droid Serif'; 
+      /* color palette from https://www.colourlovers.com/palette/361545/garden_picnic */
+
+      body {
+        font-family: 'Droid Serif';
       }
+
       h1, h2, h3 {
         font-family: 'Yanone Kaffeesatz';
         font-weight: normal;
       }
-      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+
+      h1, p {
+        color: white;
+      }
+      h2 {
+        color: #C5645E;
+      }
+
+      a, blockquote, strong, em {
+        color: #FADF68;
+      }
 
       blockquote {
         /* vertical line on the left of quotes */
         margin-left: 0px;
         padding-left: 36px;
-        border-left: 4px solid pink;
+        border-left: 4px solid #C5645E;
+        font-family: 'Yanone Kaffeesatz';
+        font-size: 1.25em;
+      }
+
+      code {
+        background: #272822;
+        border-radius: 5px;
+      }
+
+      img {
+        max-width: 100%;
+      }
+
+      .remark-container {
+        background-color: black; /* #540F0E; */
+      }
+
+      .remark-slide-content {
+        background-color: black; /* #1E270D; */
+        color: white;
+      }
+
+      .remark-slide-scaler {
+        -webkit-box-shadow: 0 0 30px #646F32;
+        box-shadow: 0 0 30px #646F32;
+      }
+
+      .remark-code, .remark-inline-code {
+        font-family: 'Ubuntu Mono';
+      }
+      .remark-inline-code {
+        padding-left: 10px;
+        padding-right: 10px;
+        color: #FADF68;
       }
     </style>
+
   </head>
   <body>
     <textarea id="source">
