adding about joins

--- a/docs/_layouts/presentation.html
+++ b/docs/_layouts/presentation.html
@@ -48,6 +48,13 @@
         max-width: 100%;
       }
 
+      table td, table th {
+        border: 1px solid#272822;
+        font-family: 'Ubuntu Mono';
+        padding: 4px;
+        font-size: 0.8em;
+      }
+
       .remark-container {
         background-color: black; /* #540F0E; */
       }
