--- a/assets/jekyll/_layouts/github.html
+++ b/assets/jekyll/_layouts/github.html
@@ -7,8 +7,8 @@
 
     <!-- Begin Jekyll SEO tag v2.8.0 -->
     <title>
-      {{ page.title | downcase | strip_html }} | {{ site.github.repository_name
-      }} | {{ site.github.owner_name | downcase | strip_html }}
+      {{ site.github.owner_name | downcase | strip_html }} | {{ page.title |
+      downcase | strip_html }} | {{ site.github.repository_name }}
     </title>
     <meta name="generator" content="Jekyll v3.9.2" />
     <meta property="og:title" content="{{ page.title | strip_html }}" />
