--- a/assets/jekyll/_layouts/github.html
+++ b/assets/jekyll/_layouts/github.html
@@ -50,8 +50,11 @@
 
     <!-- Setup Google Analytics -->
 
-    <!-- You can set your favicon here -->
-    <!-- link rel="shortcut icon" type="image/x-icon" href="/{{ site.github-org-name }}/favicon.ico" -->
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="{{ site.baseurl | strip_html }}/assets/favicon.ico"
+    />
 
     <!-- end custom head snippets -->
   </head>
