--- a/assets/jekyll/_layouts/presentation.html
+++ b/assets/jekyll/_layouts/presentation.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>{{ page.title | strip_html }}</title>
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="{{ site.baseurl | strip_html }}/assets/favicon.ico"
+    />
     <style>
       @import url(//fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
       @import url(//fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
