content, not page.content

--- a/assets/jekyll/_layouts/github.html
+++ b/assets/jekyll/_layouts/github.html
@@ -73,7 +73,7 @@
         </small>
       </header>
 
-      <main>{{ page.content | markdownify }}</main>
+      <main>{{ content | markdownify }}</main>
 
       <footer>
         <h2 id="copyright">Copyright</h2>
