--- a/assets/jekyll/_layouts/presentation.html
+++ b/assets/jekyll/_layouts/presentation.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>{{ page.title | strip_html }}</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    {% seo %}
+
     <link
       rel="shortcut icon"
       type="image/x-icon"
