styles for tables

--- a/theme/_layouts/github.html
+++ b/theme/_layouts/github.html
@@ -9,7 +9,7 @@
 
     <link
       rel="stylesheet"
-      href="{{ site.baseurl | strip_html }}/theme/css/style.css"
+      href="{{ site.baseurl | strip_html }}/theme/css/github.css"
     />
     <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
