proper markdown files

--- a/theme/_layouts/presentation.html
+++ b/theme/_layouts/presentation.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
       href="{{ site.baseurl | strip_html }}/theme/css/presentation.css"
     />
+
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -19,6 +20,7 @@
   </head>
   <body>
     <header class="slides">
+      <!-- breadcrumb -->
       <small>
         <a href="https://github.com/{{ site.github.owner_name }}">
           {{ site.github.owner_name | downcase | strip_html }}
@@ -28,9 +30,23 @@
           <!-- {{ site.github-org-name }} -->
           {{ site.github.repository_name | strip_html }}
         </a>
+        /
+        <a href="{{ site.baseurl | strip_html }}{{ page.url }}">
+          {{ page.title | downcase | strip_html }}
+        </a>
       </small>
+      <!-- // breadcrumb -->
     </header>
-    <textarea id="source">{{ content }}</textarea>
+    <textarea id="source">{{ page.content }}</textarea>
+    <footer>
+      <small>
+        <a
+          class="source"
+          href="https://github.com/{{ site.github-org-name }}{{ site.baseurl }}/blob/master/{{ page.path | strip_html }}"
+          >view source</a
+        >.
+      </small>
+    </footer>
     <script
       src="{{ site.baseurl | strip_html }}/theme/js/remark.js"
       type="text/javascript"
